--- a/admin/src/components/Display.css
+++ b/admin/src/components/Display.css
@@ -15,6 +15,10 @@
   padding: 10px;
 }
 
+.Display-project hr {
+  margin-bottom: 0;
+}
+
 .Display-project input {
   font-size: 16px;
 }
@@ -47,8 +51,27 @@
 }
 
 .Display-create-button {
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 30px;
   font-size: 16px;
+}
+
+.Display-note-delete {
+  color: red;
+  font-style: italic;
+}
+
+.Display-note-update {
+  display: block;
+  margin-top: 10px;
+  color: orange;
+  font-style: italic;
+}
+
+.Display-note-create {
+  display: block;
+  margin-top: 10px;
+  color: green;
+  font-style: italic;
 }
