--- a/admin/src/components/Display.css
+++ b/admin/src/components/Display.css
@@ -23,6 +23,11 @@
   font-size: 16px;
 }
 
+.Display-collapsed-project-title {
+  font-weight: bold;
+  margin-top: 0;
+}
+
 .Display-project button {
   font-size: 16px;
 }
