--- a/admin/src/components/Display.css
+++ b/admin/src/components/Display.css
@@ -3,20 +3,30 @@
   bottom: 20px;
   right: 20px;
   font-size: 16px;
+  background-color: #61a4fa;
+  color: white;
+  border-radius: 5px;
+  border-width: 0;
+  padding: 10px;
+  box-shadow: 2px 2px 5px grey;
 }
 
-.Display-projects {
+.Display-projects-container {
   height: 100vh;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #eee;
 }
 
 .Display-project {
   width: 480px;
   padding: 10px;
-}
-
-.Display-project hr {
-  margin-bottom: 0;
+  background-color: white;
+  margin-top: 20px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px grey;
 }
 
 .Display-project input {
@@ -70,10 +80,16 @@
 }
 
 .Display-create-button {
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 20px;
   margin-bottom: 30px;
   font-size: 16px;
+  width: 500px;
+  border-radius: 5px;
+  background-color: #16db29;
+  color: white;
+  border-width: 0;
+  padding: 10px;
+  box-shadow: 2px 2px 5px grey;
 }
 
 .Display-note-delete {
