--- a/frontend/src/components/Config.css
+++ b/frontend/src/components/Config.css
@@ -12,6 +12,14 @@
   font-size: 16px;
 }
 
+.Config-toggle-button {
+  background-color: grey;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border-width: 0;
+}
+
 .Config-main-expanded {
   background-color: #eee;
   width: 480px;
@@ -27,18 +35,33 @@
 
 .Config-form-group {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   padding: 5px 0;
 }
 
 .Config-form-group label {
   width: 100px;
+  margin-bottom: 5px;
+}
+
+.Config-form-group small {
+  color: grey;
+  font-style: italic;
+  margin-bottom: 2px;
 }
 
 .Config-form-group input {
   flex-grow: 1;
+  padding: 5px;
+  border-radius: 3px;
+  border-width: 1px;
 }
 
 .Config-form-submit-button {
   margin-top: 10px;
+  background-color: #16db29;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border-width: 0;
 }
