--- a/admin/src/components/Display.css
+++ b/admin/src/components/Display.css
@@ -3,20 +3,30 @@
   bottom: 20px;
   right: 20px;
   font-size: 16px;
+  background-color: #61a4fa;
+  color: white;
+  border-radius: 5px;
+  border-width: 0;
+  padding: 10px;
+  box-shadow: 2px 2px 5px grey;
 }
 
-.Display-projects {
+.Display-projects-container {
   height: 100vh;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #eee;
 }
 
 .Display-project {
   width: 480px;
   padding: 10px;
-}
-
-.Display-project hr {
-  margin-bottom: 0;
+  background-color: white;
+  margin-top: 20px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px grey;
 }
 
 .Display-project input {
@@ -25,7 +35,8 @@
 
 .Display-collapsed-project-title {
   font-weight: bold;
-  margin-top: 0;
+  margin: 0;
+  font-size: 24px;
 }
 
 .Display-project button {
@@ -37,17 +48,21 @@
 }
 
 .Display-project-form-group {
+  margin-top: 10px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   padding: 5px 0;
 }
 
 .Display-project-form-group label {
-  width: 100px;
+  margin-bottom: 5px;
 }
 
 .Display-project-form-group input {
   flex-grow: 1;
+  padding: 5px;
+  border-radius: 3px;
+  border-width: 1px;
 }
 
 .Display-project-form-group input[type='file'] {
@@ -58,6 +73,7 @@
 .Display-project-form-group textarea {
   flex-grow: 1;
   height: 100px;
+  border-radius: 3px;
 }
 
 .Display-project-form-image {
@@ -70,10 +86,33 @@
 }
 
 .Display-create-button {
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 20px;
   margin-bottom: 30px;
   font-size: 16px;
+  width: 500px;
+  border-radius: 5px;
+  background-color: #16db29;
+  color: white;
+  border-width: 0;
+  padding: 10px;
+  box-shadow: 2px 2px 5px grey;
+}
+
+.Display-close-button {
+  margin-right: 10px;
+  border-radius: 5px;
+  background-color: grey;
+  color: white;
+  border-width: 0;
+  padding: 10px;
+}
+
+.Display-delete-button {
+  border-radius: 5px;
+  background-color: red;
+  color: white;
+  border-width: 0;
+  padding: 10px;
 }
 
 .Display-note-delete {
