--- a/admin/src/components/Display.css
+++ b/admin/src/components/Display.css
@@ -147,6 +147,15 @@
   font-style: italic;
 }
 
+.Display-note-undo-button {
+  margin-top: 10px;
+  border-radius: 5px;
+  background-color: gray;
+  color: white;
+  border-width: 0;
+  padding: 10px;
+}
+
 .Display-note-update {
   display: block;
   margin-top: 10px;
