--- a/admin/src/components/Display.css
+++ b/admin/src/components/Display.css
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #eee;
+  background-color: clear;
 }
 
 .Display-project {
@@ -54,6 +54,7 @@
   margin-top: 20px;
   border-radius: 5px;
   box-shadow: 2px 2px 5px grey;
+  transition: 0.3s;
 }
 
 .Display-project input {
